<resources>
    <string name="app_name">Github User</string>
    <string name="setting">Setting</string>
    <string name="search">search</string>
    <string name="username_github">Username Github</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kembali">Kembali</string>
    <string name="refresh">refresh</string>
    <string name="name">Name</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="image">image</string>
    <string name="followers_count">Followers :</string>
    <string name="count_following">Following :</string>
    <string name="data_tidak_tersedia">Data Tidak Tersedia</string>
    <string name="heart">Heart</string>
    <string name="love">Love</string>
    <string name="setting_theme">Setting Theme</string>
</resources>