<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailUsers"
    app:navGraph="@navigation/graph_nav"
    tools:context=".UI.DetailUsersFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/pg_detail"
                style="?android:attr/progressBarStyle"
                android:layout_gravity="center"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/name"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/username"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/username_github" />

            <TextView
                android:id="@+id/count_followers"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/followers_count" />

            <TextView
                android:id="@+id/count_following"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:text="@string/count_following" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabFollowingAndFollowers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_love"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:contentDescription="@string/heart"
        android:src="@drawable/heart" />

</FrameLayout>